--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#491A4E",
-        "titleBar.activeBackground": "#66246D",
-        "titleBar.activeForeground": "#FCF8FD"
+        "activityBar.background": "#13332E",
+        "titleBar.activeBackground": "#19423C",
+        "titleBar.activeForeground": "#F6FBFB"
     },
     "liveServer.settings.port": 5501
 }
